Criado a página de cadastro

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,3 +1,4 @@
 $primary-color: #eb3349;
-$secondary-color: #f45c43;
+$secondary-color: hsl(8, 89%, 61%);
 $text-color: #d6152c;
+$background-color: #ccc;
