--- a/css/_login.scss
+++ b/css/_login.scss
@@ -1,3 +1,5 @@
+@import "buttons";
+
 .container-fluid {
   height: 100%;
   width: 100%;
@@ -9,7 +11,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: #eee;
+    background-color: $background-color;
 
     .login-form {
       display: flex;
@@ -100,30 +102,7 @@
         }
 
         button {
-          width: 100%;
-          background-image: linear-gradient(
-            to right,
-            #eb3349 0%,
-            #f45c43 51%,
-            #eb3349 100%
-          );
-
-          padding: 15px 45px;
-          text-align: center;
-          text-transform: uppercase;
-          transition: 0.5s;
-          background-size: 200% auto;
-          color: white;
-          font-weight: bold;
-          box-shadow: 0 0 20px #eee;
-          border-radius: 10px;
-          display: block;
-
-          &:hover {
-            background-position: right center; /* change the direction of the change here */
-            color: #fff;
-            text-decoration: none;
-          }
+          @include btn-primary(100%);
         }
 
         .login-footer {
