--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,4 +1,5 @@
-$primary-color: #eb3349;
+$primary-color: #fa5741;
 $secondary-color: hsl(8, 89%, 61%);
-$text-color: #d6152c;
-$background-color: #ccc;
+$text-color: #c74534;
+$background-color: rgb(236, 234, 234);
+$sidebar-color: rgb(44, 43, 43);
