--- a/css/_reset.scss
+++ b/css/_reset.scss
@@ -10,8 +10,29 @@ html,
 body {
   width: 100%;
   height: 100%;
+  font-size: 15px;
 }
 
 a {
   text-decoration: none;
+  color: white;
+}
+
+.container-fluid {
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+button {
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
 }
