--- a/css/style.css
+++ b/css/style.css
@@ -25,24 +25,48 @@ html,
 body {
   width: 100%;
   height: 100%;
+  font-size: 15px;
 }
 
 a {
   text-decoration: none;
+  color: white;
+}
+
+.container-fluid {
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+button {
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
 }
 
 .container-fluid {
   height: 100%;
-  width: 100%;
+  width: 100vw;
 }
 .container-fluid .row {
   height: 100%;
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  background-color: #ccc;
+  background-color: rgb(236, 234, 234);
+}
+.container-fluid .row .login-banner img {
+  width: 40%;
 }
 .container-fluid .row .login-form {
   display: flex;
@@ -61,7 +85,7 @@ a {
   box-shadow: 0px 6px 7px -4px rgba(0, 0, 0, 0.64);
 }
 .container-fluid .row .login-form-wrapper h2 {
-  color: #d6152c;
+  color: #c74534;
   font-weight: bold;
   margin-bottom: 20px;
 }
@@ -115,10 +139,8 @@ a {
 }
 .container-fluid .row .login-form-wrapper button {
   width: 100%;
-  min-width: 200px;
   background-image: linear-gradient(to right, #eb3349 0%, #f45c43 51%, #eb3349 100%);
   border: none;
-  padding: 15px 45px;
   text-align: center;
   text-transform: uppercase;
   transition: 0.5s;
@@ -126,7 +148,7 @@ a {
   color: white;
   font-weight: bold;
   box-shadow: 0 0 20px #eee;
-  border-radius: 10px;
+  border-radius: 8px;
   display: block;
 }
 .container-fluid .row .login-form-wrapper button:hover {
@@ -144,7 +166,7 @@ a {
   gap: 5px;
 }
 .container-fluid .row .login-form-wrapper .login-footer small a {
-  color: #d6152c;
+  color: #c74534;
   transition: all 400ms ease;
 }
 .container-fluid .row .login-form-wrapper .login-footer small a:hover {
@@ -158,14 +180,14 @@ a {
   gap: 20px;
 }
 .container-fluid .row .login-banner h2 {
-  color: #d6152c;
+  color: #c74534;
   font-weight: bold;
 }
 
 .register-container {
   height: 100%;
   padding: 0 2%;
-  background-color: #ccc;
+  background-color: rgb(236, 234, 234);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -182,7 +204,7 @@ a {
   box-shadow: 0px 6px 7px -4px rgba(0, 0, 0, 0.64);
 }
 .register-form-wrapper h2 {
-  color: #d6152c;
+  color: #c74534;
   font-weight: bold;
   margin-bottom: 20px;
 }
@@ -245,10 +267,8 @@ a {
 }
 .register-form-wrapper .btn-primary {
   width: 30%;
-  min-width: 200px;
   background-image: linear-gradient(to right, #eb3349 0%, #f45c43 51%, #eb3349 100%);
   border: none;
-  padding: 15px 45px;
   text-align: center;
   text-transform: uppercase;
   transition: 0.5s;
@@ -256,7 +276,7 @@ a {
   color: white;
   font-weight: bold;
   box-shadow: 0 0 20px #eee;
-  border-radius: 10px;
+  border-radius: 8px;
   display: block;
 }
 .register-form-wrapper .btn-primary:hover {
@@ -267,10 +287,8 @@ a {
 }
 .register-form-wrapper .btn-secondary {
   width: 30%;
-  min-width: 200px;
   background-image: linear-gradient(to right, #eb3349 0%, #f45c43 51%, #eb3349 100%);
   border: none;
-  padding: 15px 45px;
   text-align: center;
   text-transform: uppercase;
   transition: 0.5s;
@@ -278,7 +296,7 @@ a {
   color: white;
   font-weight: bold;
   box-shadow: 0 0 20px #eee;
-  border-radius: 10px;
+  border-radius: 8px;
   display: block;
 }
 .register-form-wrapper .btn-secondary:hover {
@@ -311,7 +329,7 @@ input[type=radio]::before {
   border-radius: 50%;
   transform: scale(0);
   transition: 120ms transform ease-in-out;
-  box-shadow: inset 1em 1em #eb3349;
+  box-shadow: inset 1em 1em #fa5741;
 }
 
 input[type=radio]:checked::before {
@@ -324,5 +342,243 @@ input[type=radio]:checked::before {
     justify-content: center;
     align-items: center;
     gap: 10px;
+  }
+}
+aside {
+  display: none;
+  position: fixed;
+  width: 10%;
+  min-width: 200px;
+  height: 100%;
+  background-color: rgb(44, 43, 43);
+  margin: 0;
+  right: -200%;
+  z-index: 100;
+  box-shadow: 11px 13px 5px -8px rgba(0, 0, 0, 0.38);
+}
+aside .aside-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 20%;
+  width: 100%;
+  gap: 10px;
+  position: relative;
+}
+aside .aside-title h2 {
+  font-weight: bold;
+  color: #fa5741;
+}
+aside .aside-title img {
+  width: 50%;
+  max-width: 80px;
+}
+aside .aside-title button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 2px;
+  color: white;
+}
+aside .aside-title button span {
+  font-size: 30px;
+}
+aside .aside-title button:hover {
+  font-weight: bold;
+  color: white;
+  transform: scale(1.1);
+}
+aside .aside-title button:focus {
+  transform: scale(1.1);
+}
+aside .aside-menu {
+  height: 80%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 10%;
+}
+aside .aside-menu ul {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+aside .aside-menu ul li {
+  height: 60px;
+  width: 100%;
+}
+aside .aside-menu ul li button {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  position: relative;
+  font-weight: bold;
+  height: 100%;
+  width: 100%;
+  padding-left: 45px;
+  color: white;
+}
+aside .aside-menu ul li button:hover {
+  background-color: rgba(250, 87, 65, 0.7);
+  color: white;
+}
+aside .aside-menu ul li:last-child {
+  position: absolute;
+  bottom: 50px;
+}
+
+@-webkit-keyframes slide-in-left {
+  to {
+    right: 0;
+  }
+}
+
+@keyframes slide-in-left {
+  to {
+    right: 0;
+  }
+}
+@-webkit-keyframes slide-in-exit {
+  to {
+    right: -200%;
+  }
+}
+@keyframes slide-in-exit {
+  to {
+    right: -200%;
+  }
+}
+@media screen and (min-width: 769px) {
+  aside {
+    box-shadow: none;
+  }
+  aside .aside-title button {
+    display: none;
+  }
+}
+.container-dashboard {
+  height: 100%;
+  width: 100%;
+  background-color: rgb(236, 234, 234);
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr;
+}
+.container-dashboard main {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+.container-dashboard main header {
+  height: 8%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px 0 20px;
+}
+.container-dashboard main header .text-dashboard h3 {
+  color: #fa5741;
+  font-weight: bold;
+}
+.container-dashboard main header .display-aside .menu {
+  height: 100px;
+}
+.container-dashboard main header .display-aside .menu span {
+  color: #fa5741;
+}
+.container-dashboard main header .display-aside .menu span:hover {
+  transform: scale(1.1);
+}
+.container-dashboard main .main-content {
+  height: 100%;
+  width: 100%;
+}
+.container-dashboard main .main-content .main-control {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  padding: 0 2rem 0 2rem;
+}
+.container-dashboard main .main-content .main-control-one {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.container-dashboard main .main-content .main-control-one a {
+  width: 150px;
+  background-image: linear-gradient(to right, #eb3349 0%, #f45c43 51%, #eb3349 100%);
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  font-weight: bold;
+  box-shadow: 0 0 20px #eee;
+  border-radius: 8px;
+  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  font-size: 12px;
+  padding: 5px;
+}
+.container-dashboard main .main-content .main-control-one a:hover {
+  background-position: right center;
+  /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
+}
+.container-dashboard main .main-content .main-control-two {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.container-dashboard main .main-content .itens-container {
+  background-color: white;
+  border-radius: 10px;
+  margin: 0 2rem 2rem 2rem;
+  padding: 1rem;
+  font-size: 0.8rem;
+}
+.container-dashboard main .main-content .itens-container table th {
+  color: #fa5741;
+  font-size: 1.1rem;
+}
+.container-dashboard main .main-content .itens-container table tbody tr:hover {
+  background-color: rgb(236, 234, 234);
+}
+.container-dashboard main .main-content .itens-container table tbody td button {
+  width: 100%;
+}
+.container-dashboard main .main-content .itens-container table tbody td button span {
+  font-size: 1.3rem;
+}
+.container-dashboard main .main-content .itens-container table tbody td button span:hover {
+  color: #fa5741;
+}
+
+@media screen and (min-width: 790px) {
+  .container-dashboard {
+    grid-template-columns: 200px 1fr;
+  }
+
+  aside {
+    position: relative;
+    display: block;
+    left: 0;
+  }
+
+  main header .display-aside button {
+    display: none;
   }
 }/*# sourceMappingURL=style.css.map */
